<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_email"
        android:id="@+id/Email"
        android:padding="21dp"
        android:inputType="number"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_password"
        android:id="@+id/password"
        android:padding="21dp"
        android:inputType="numberPassword"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />
   <androidx.appcompat.widget.AppCompatButton
       android:layout_width="wrap_content"
       android:layout_marginTop="10dp"
       android:layout_height="wrap_content"
       android:text="@string/sign_in"
       android:id="@+id/signin"
       android:textStyle="bold"
       android:backgroundTint="#2196F3"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_a_account"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:id="@+id/signup"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

</LinearLayout>